src/smvlang/y.output
Terminals unused in grammar

    EX_Toekn


Grammar

    0 $accept: start $end

    1 start: modules
    2      | formula

    3 modules: module
    4        | modules module

    5 module: module_head sections

    6 module_name: STRING_Token
    7            | QUOTE_Token

    8 module_head: MODULE_Token module_name

    9 $@1: %empty

   10 module_head: MODULE_Token module_name $@1 '(' module_argument_list_opt ')'

   11 sections: %empty
   12         | section sections

   13 semi_opt: %empty
   14         | ';'

   15 section: VAR_Token vardecls
   16        | VAR_Token
   17        | INIT_Token formula semi_opt
   18        | INIT_Token
   19        | TRANS_Token formula semi_opt
   20        | TRANS_Token
   21        | SPEC_Token formula semi_opt
   22        | SPEC_Token
   23        | ASSIGN_Token assignments
   24        | ASSIGN_Token
   25        | DEFINE_Token defines
   26        | DEFINE_Token
   27        | INVAR_Token formula semi_opt
   28        | INVAR_Token
   29        | FAIRNESS_Token formula semi_opt
   30        | FAIRNESS_Token
   31        | EXTERN_Token extern_var semi_opt
   32        | EXTERN_Token

   33 extern_var: variable_name EQUAL_Token QUOTE_Token

   34 vardecls: vardecl
   35         | vardecl vardecls

   36 module_argument: variable_name

   37 module_argument_list: module_argument
   38                     | module_argument_list ',' module_argument

   39 module_argument_list_opt: %empty
   40                         | module_argument_list

   41 type: ARRAY_Token NUMBER_Token DOTDOT_Token NUMBER_Token OF_Token type
   42     | BOOLEAN_Token
   43     | '{' enum_list '}'
   44     | NUMBER_Token DOTDOT_Token NUMBER_Token
   45     | usertype

   46 usertype: module_name
   47         | module_name '(' formula_list ')'

   48 enum_list: enum_element
   49          | enum_list ',' enum_element

   50 enum_element: STRING_Token

   51 vardecl: variable_name ':' type ';'

   52 assignments: assignment
   53            | assignment assignments
   54            | define
   55            | define assignments

   56 assignment: assignment_head '(' assignment_var ')' BECOMES_Token formula ';'

   57 assignment_var: variable_name

   58 assignment_head: init_Token
   59                | NEXT_Token

   60 defines: define
   61        | define defines

   62 define: assignment_var BECOMES_Token formula ';'

   63 formula: term

   64 term: variable_name
   65     | NEXT_Token '(' term ')'
   66     | '(' formula ')'
   67     | '{' formula_list '}'
   68     | INC_Token '(' term ')'
   69     | DEC_Token '(' term ')'
   70     | ADD_Token '(' term ',' term ')'
   71     | SUB_Token '(' term ',' term ')'
   72     | NUMBER_Token
   73     | TRUE_Token
   74     | FALSE_Token
   75     | CASE_Token cases ESAC_Token
   76     | SWITCH_Token '(' variable_name ')' '{' switches '}'
   77     | MINUS_Token term
   78     | term MOD_Token term
   79     | term TIMES_Token term
   80     | term DIVIDE_Token term
   81     | term PLUS_Token term
   82     | term MINUS_Token term
   83     | term EQUIV_Token term
   84     | term IMPLIES_Token term
   85     | term XOR_Token term
   86     | term OR_Token term
   87     | term AND_Token term
   88     | NOT_Token term
   89     | AX_Token term
   90     | AF_Token term
   91     | AG_Token term
   92     | EX_Token term
   93     | EF_Token term
   94     | EG_Token term
   95     | A_Token term
   96     | E_Token term
   97     | F_Token term
   98     | G_Token term
   99     | X_Token term
  100     | term U_Token term
  101     | term EQUAL_Token term
  102     | term NOTEQUAL_Token term
  103     | term LT_Token term
  104     | term LE_Token term
  105     | term GT_Token term
  106     | term GE_Token term
  107     | term UNION_Token term
  108     | term IN_Token term
  109     | term NOTIN_Token term

  110 formula_list: formula
  111             | formula_list ',' formula

  112 variable_name: qstring_list
  113              | QUOTE_Token

  114 qstring_list: QSTRING_Token
  115             | STRING_Token
  116             | qstring_list DOT_Token QSTRING_Token
  117             | qstring_list DOT_Token STRING_Token
  118             | qstring_list '[' NUMBER_Token ']'
  119             | qstring_list '(' NUMBER_Token ')'

  120 cases: %empty
  121      | cases case

  122 case: formula ':' formula ';'

  123 switches: %empty
  124         | switches switch

  125 switch: NUMBER_Token ':' term ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 47 56 65 66 68 69 70 71 76 119
    ')' (41) 10 47 56 65 66 68 69 70 71 76 119
    ',' (44) 38 49 70 71 111
    ':' (58) 51 122 125
    ';' (59) 14 51 56 62 122 125
    '[' (91) 118
    ']' (93) 118
    '{' (123) 43 67 76
    '}' (125) 43 67 76
    error (256)
    AG_Token (258) 91
    AX_Token (259) 89
    AF_Token (260) 90
    EG_Token (261) 94
    EX_Toekn (262)
    EF_Token (263) 93
    INIT_Token (264) 17 18
    TRANS_Token (265) 19 20
    SPEC_Token (266) 21 22
    VAR_Token (267) 15 16
    DEFINE_Token (268) 25 26
    ASSIGN_Token (269) 23 24
    INVAR_Token (270) 27 28
    FAIRNESS_Token (271) 29 30
    MODULE_Token (272) 8 10
    ARRAY_Token (273) 41
    OF_Token (274) 41
    DOTDOT_Token (275) 41 44
    BOOLEAN_Token (276) 42
    EXTERN_Token (277) 31 32
    NEXT_Token (278) 59 65
    INC_Token (279) 68
    DEC_Token (280) 69
    CASE_Token (281) 75
    ESAC_Token (282) 75
    BECOMES_Token (283) 56 62
    ADD_Token (284) 70
    SUB_Token (285) 71
    SWITCH_Token (286) 76
    init_Token (287) 58
    PLUS_Token (288) 81
    STRING_Token (289) 6 50 115 117
    QSTRING_Token (290) 114 116
    QUOTE_Token (291) 7 33 113
    NUMBER_Token (292) 41 44 72 118 119 125
    FALSE_Token (293) 74
    TRUE_Token (294) 73
    IMPLIES_Token (295) 84
    EQUIV_Token (296) 83
    XOR_Token (297) 85
    OR_Token (298) 86
    AND_Token (299) 87
    NOT_Token (300) 88
    EX_Token (301) 92
    E_Token (302) 96
    A_Token (303) 95
    U_Token (304) 100
    F_Token (305) 97
    G_Token (306) 98
    X_Token (307) 99
    EQUAL_Token (308) 33 101
    NOTEQUAL_Token (309) 102
    LT_Token (310) 103
    GT_Token (311) 105
    LE_Token (312) 104
    GE_Token (313) 106
    UNION_Token (314) 107
    IN_Token (315) 108
    NOTIN_Token (316) 109
    MOD_Token (317) 78
    MINUS_Token (318) 77 82
    TIMES_Token (319) 79
    DIVIDE_Token (320) 80
    UMINUS (321)
    DOT_Token (322) 116 117


Nonterminals, with rules where they appear

    $accept (77)
        on left: 0
    start (78)
        on left: 1 2
        on right: 0
    modules (79)
        on left: 3 4
        on right: 1 4
    module (80)
        on left: 5
        on right: 3 4
    module_name (81)
        on left: 6 7
        on right: 8 10 46 47
    module_head (82)
        on left: 8 10
        on right: 5
    $@1 (83)
        on left: 9
        on right: 10
    sections (84)
        on left: 11 12
        on right: 5 12
    semi_opt (85)
        on left: 13 14
        on right: 17 19 21 27 29 31
    section (86)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 12
    extern_var (87)
        on left: 33
        on right: 31
    vardecls (88)
        on left: 34 35
        on right: 15 35
    module_argument (89)
        on left: 36
        on right: 37 38
    module_argument_list (90)
        on left: 37 38
        on right: 38 40
    module_argument_list_opt (91)
        on left: 39 40
        on right: 10
    type (92)
        on left: 41 42 43 44 45
        on right: 41 51
    usertype (93)
        on left: 46 47
        on right: 45
    enum_list (94)
        on left: 48 49
        on right: 43 49
    enum_element (95)
        on left: 50
        on right: 48 49
    vardecl (96)
        on left: 51
        on right: 34 35
    assignments (97)
        on left: 52 53 54 55
        on right: 23 53 55
    assignment (98)
        on left: 56
        on right: 52 53
    assignment_var (99)
        on left: 57
        on right: 56 62
    assignment_head (100)
        on left: 58 59
        on right: 56
    defines (101)
        on left: 60 61
        on right: 25 61
    define (102)
        on left: 62
        on right: 54 55 60 61
    formula (103)
        on left: 63
        on right: 2 17 19 21 27 29 56 62 66 110 111 122
    term (104)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 63 65 68 69 70 71 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 125
    formula_list (105)
        on left: 110 111
        on right: 47 67 111
    variable_name (106)
        on left: 112 113
        on right: 33 36 51 57 64 76
    qstring_list (107)
        on left: 114 115 116 117 118 119
        on right: 112 116 117 118 119
    cases (108)
        on left: 120 121
        on right: 75 121
    case (109)
        on left: 122
        on right: 121
    switches (110)
        on left: 123 124
        on right: 76 124
    switch (111)
        on left: 125
        on right: 124


State 0

    0 $accept: . start $end

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    MODULE_Token   shift, and go to state 6
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    start          go to state 30
    modules        go to state 31
    module         go to state 32
    module_head    go to state 33
    formula        go to state 34
    term           go to state 35
    variable_name  go to state 36
    qstring_list   go to state 37


State 1

   91 term: AG_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 38
    variable_name  go to state 36
    qstring_list   go to state 37


State 2

   89 term: AX_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 39
    variable_name  go to state 36
    qstring_list   go to state 37


State 3

   90 term: AF_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 40
    variable_name  go to state 36
    qstring_list   go to state 37


State 4

   94 term: EG_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 41
    variable_name  go to state 36
    qstring_list   go to state 37


State 5

   93 term: EF_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 42
    variable_name  go to state 36
    qstring_list   go to state 37


State 6

    8 module_head: MODULE_Token . module_name
   10            | MODULE_Token . module_name $@1 '(' module_argument_list_opt ')'

    STRING_Token  shift, and go to state 43
    QUOTE_Token   shift, and go to state 44

    module_name  go to state 45


State 7

   65 term: NEXT_Token . '(' term ')'

    '('  shift, and go to state 46


State 8

   68 term: INC_Token . '(' term ')'

    '('  shift, and go to state 47


State 9

   69 term: DEC_Token . '(' term ')'

    '('  shift, and go to state 48


State 10

   75 term: CASE_Token . cases ESAC_Token

    $default  reduce using rule 120 (cases)

    cases  go to state 49


State 11

   70 term: ADD_Token . '(' term ',' term ')'

    '('  shift, and go to state 50


State 12

   71 term: SUB_Token . '(' term ',' term ')'

    '('  shift, and go to state 51


State 13

   76 term: SWITCH_Token . '(' variable_name ')' '{' switches '}'

    '('  shift, and go to state 52


State 14

  115 qstring_list: STRING_Token .

    $default  reduce using rule 115 (qstring_list)


State 15

  114 qstring_list: QSTRING_Token .

    $default  reduce using rule 114 (qstring_list)


State 16

  113 variable_name: QUOTE_Token .

    $default  reduce using rule 113 (variable_name)


State 17

   72 term: NUMBER_Token .

    $default  reduce using rule 72 (term)


State 18

   74 term: FALSE_Token .

    $default  reduce using rule 74 (term)


State 19

   73 term: TRUE_Token .

    $default  reduce using rule 73 (term)


State 20

   88 term: NOT_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 53
    variable_name  go to state 36
    qstring_list   go to state 37


State 21

   92 term: EX_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 54
    variable_name  go to state 36
    qstring_list   go to state 37


State 22

   96 term: E_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 55
    variable_name  go to state 36
    qstring_list   go to state 37


State 23

   95 term: A_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 56
    variable_name  go to state 36
    qstring_list   go to state 37


State 24

   97 term: F_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 57
    variable_name  go to state 36
    qstring_list   go to state 37


State 25

   98 term: G_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 58
    variable_name  go to state 36
    qstring_list   go to state 37


State 26

   99 term: X_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 59
    variable_name  go to state 36
    qstring_list   go to state 37


State 27

   77 term: MINUS_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    term           go to state 60
    variable_name  go to state 36
    qstring_list   go to state 37


State 28

   66 term: '(' . formula ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    formula        go to state 61
    term           go to state 35
    variable_name  go to state 36
    qstring_list   go to state 37


State 29

   67 term: '{' . formula_list '}'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    EG_Token       shift, and go to state 4
    EF_Token       shift, and go to state 5
    NEXT_Token     shift, and go to state 7
    INC_Token      shift, and go to state 8
    DEC_Token      shift, and go to state 9
    CASE_Token     shift, and go to state 10
    ADD_Token      shift, and go to state 11
    SUB_Token      shift, and go to state 12
    SWITCH_Token   shift, and go to state 13
    STRING_Token   shift, and go to state 14
    QSTRING_Token  shift, and go to state 15
    QUOTE_Token    shift, and go to state 16
    NUMBER_Token   shift, and go to state 17
    FALSE_Token    shift, and go to state 18
    TRUE_Token     shift, and go to state 19
    NOT_Token      shift, and go to state 20
    EX_Token       shift, and go to state 21
    E_Token        shift, and go to state 22
    A_Token        shift, and go to state 23
    F_Token        shift, and go to state 24
    G_Token        shift, and go to state 25
    X_Token        shift, and go to state 26
    MINUS_Token    shift, and go to state 27
    '('            shift, and go to state 28
    '{'            shift, and go to state 29

    formula        go to state 62
    term           go to state 35
    formula_list   go to state 63
    variable_name  go to state 36
    qstring_list   go to state 37


State 30

    0 $accept: start . $end

    $end  shift, and go to state 64


State 31

    1 start: modules .
    4 modules: modules . module

    MODULE_Token  shift, and go to state 6

    $default  reduce using rule 1 (start)

    module       go to state 65
    module_head  go to state 33


State 32

    3 modules: module .

    $default  reduce using rule 3 (modules)


State 33

    5 module: module_head . sections

    INIT_Token      shift, and go to state 66
    TRANS_Token     shift, and go to state 67
    SPEC_Token      shift, and go to state 68
    VAR_Token       shift, and go to state 69
    DEFINE_Token    shift, and go to state 70
    ASSIGN_Token    shift, and go to state 71
    INVAR_Token     shift, and go to state 72
    FAIRNESS_Token  shift, and go to state 73
    EXTERN_Token    shift, and go to state 74

    $default  reduce using rule 11 (sections)

    sections  go to state 75
    section   go to state 76


State 34

    2 start: formula .

    $default  reduce using rule 2 (start)


State 35

   63 formula: term .
   78 term: term . MOD_Token term
   79     | term . TIMES_Token term
   80     | term . DIVIDE_Token term
   81     | term . PLUS_Token term
   82     | term . MINUS_Token term
   83     | term . EQUIV_Token term
   84     | term . IMPLIES_Token term
   85     | term . XOR_Token term
   86     | term . OR_Token term
   87     | term . AND_Token term
  100     | term . U_Token term
  101     | term . EQUAL_Token term
  102     | term . NOTEQUAL_Token term
  103     | term . LT_Token term
  104     | term . LE_Token term
  105     | term . GT_Token term
  106     | term . GE_Token term
  107     | term . UNION_Token term
  108     | term . IN_Token term
  109     | term . NOTIN_Token term

    PLUS_Token      shift, and go to state 77
    IMPLIES_Token   shift, and go to state 78
    EQUIV_Token     shift, and go to state 79
    XOR_Token       shift, and go to state 80
    OR_Token        shift, and go to state 81
    AND_Token       shift, and go to state 82
    U_Token         shift, and go to state 83
    EQUAL_Token     shift, and go to state 84
    NOTEQUAL_Token  shift, and go to state 85
    LT_Token        shift, and go to state 86
    GT_Token        shift, and go to state 87
    LE_Token        shift, and go to state 88
    GE_Token        shift, and go to state 89
    UNION_Token     shift, and go to state 90
    IN_Token        shift, and go to state 91
    NOTIN_Token     shift, and go to state 92
    MOD_Token       shift, and go to state 93
    MINUS_Token     shift, and go to state 94
    TIMES_Token     shift, and go to state 95
    DIVIDE_Token    shift, and go to state 96

    $default  reduce using rule 63 (formula)


State 36

   64 term: variable_name .
